--- a/src/components/FormSearchData/styles.module.css
+++ b/src/components/FormSearchData/styles.module.css
@@ -7,7 +7,7 @@
 }
 
 .input {
-  width: 22rem;
+  width: 70%;
   height: 5rem;
   border-radius: 0.5rem;
   border: 1px solid #ccc;
@@ -32,4 +32,10 @@
 
 .options {
   border-radius: 0.5rem;
+}
+
+@media (min-width: 500px) {
+  .input {
+    width: 80%;
+  }
 }
