--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,9 +1,11 @@
-.header {
+.wrapper {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 7rem;
+  max-width: 144rem;
+  margin: 0 auto;
 }
 
 .openModalButton {
@@ -38,4 +40,10 @@
   font-size: 1.3rem;
   font-weight: bold;
   color: var(--text);
+}
+
+@media (min-width: 412px) {
+  .openModalButton {
+    width: 60%;
+  }
 }
