--- a/src/components/DefaultModal/styles.module.css
+++ b/src/components/DefaultModal/styles.module.css
@@ -75,6 +75,7 @@
 
 .form {
   width: 100%;
+  height: 100%;
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -84,12 +85,17 @@
   }
 }
 
+@media (max-height: 612px) {
+  .content {
+    max-height: 55rem;
+  }
+}
+
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .content {
-    height: 50rem;
+    height: 55rem;
     max-width: 56rem;
-    max-height: 67.5rem;
     border-radius: 0.8rem;
   }
 
@@ -98,8 +104,8 @@
   }
 }
 
-@media (max-height: 612px) {
+@media (min-width: 1440px) {
   .content {
-    max-height: 55rem;
+    height: 67rem;
   }
 }
