--- a/src/components/FormSearchData/styles.module.css
+++ b/src/components/FormSearchData/styles.module.css
@@ -1,26 +1,29 @@
-.container {
+.wrapper {
   display: flex;
   width: 100%;
-  height: 6rem;
-  justify-content: space-around;
-  align-items: center;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.input {
-  width: 70%;
-  height: 5rem;
-  border-radius: 0.5rem;
-  border: 1px solid #ccc;
-  outline: none;
-  font-size: 1.5rem;
-  padding: 0 1rem;
-  color: var(--text);
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 18rem;
+}
+
+.labelSelect {
+  width: 100%;
+  font-size: 1.6rem;
 }
 
 .select {
-  width: 8rem;
+  width: 100%;
   height: 5rem;
   padding-left: 0.3rem;
+  margin: 1rem 0;
   color: var(--text);
   border-radius: 0.5rem;
   border: 1px solid var(--gray-1);
@@ -34,8 +37,38 @@
   border-radius: 0.5rem;
 }
 
-@media (min-width: 500px) {
-  .input {
-    width: 80%;
-  }
+.input {
+  width: 100%;
+  height: 5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc;
+  outline: none;
+  font-size: 1.5rem;
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+  color: var(--text);
+}
+
+.errorMessage {
+  width: 100%;
+  color: var(--red);
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.containerResults {
+  width: 100%;
+}
+
+.button {
+  height: 4rem;
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.button:enabled:hover {
+  background-color: var(--gray-1);
+  cursor: pointer;
 }
